[package]
name = "anton"
version = "0.1.0"
authors = ["Kacper Perzankowski <perzankowski.kacper@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.4.0"
diesel = { version = "1.4.1", default-features = false, features = ["postgres", "uuid", "r2d2", "serde_json", "chrono"] }
dotenv = "0.13.0"
eventbus = "0.5.1"
lazy_static = "1.3.0"
uuid = "0.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
rust-crypto = "0.2.36"